--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,8 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid orange;}
 p {color: color:white}
-a:visited { text-decoration: none; color:white; }
+a:visited { text-decoration: none; color:white;}
+a {color:white;}
 
 h3, h2 {
   color: white;
